Warnings fixed; Repository URLs fixed